-
Bug
-
Resolution: Fixed
-
Medium
-
Lustre 2.17.0
-
None
-
3
-
9223372036854775807
When all server types (MGS, MDS, OSS) run on separate nodes, any nodemap changes made on the MGS, i.e., persistent nodemap changes, synchronize the nodemap file with each server. This process implicitly removes any non-persistent nodemaps, i.e., dynamic nodemaps, on the MDSs and OSSs.
This is expected behavior, however, nodemap synchronization is only needed on remote server nodes. Therefore, if the MGS and MDS (or OSS) are colocated on the same node, synchronization is not occurring on that node, resulting in the situation where dynamic nodemaps are not wiped on the server nodes that are colocated with the MGS. This is inconsistent with the "separate server node" behavior and can further lead an inconsistent nodemap state for dynamic nodemaps across server nodes.
It would be preferrable if dynamic nodemaps are removed in all cases from all server nodes when non-dynamic nodemaps are modified on the MGS.